# ee_focus

./: CMakeLists.txt  README.md  UT Copyright  camera_pointing_sim_install.md  ee_focus_plugins.xml  ee_focus_simulation.md  format.bash  package.xml
include/ee_focus/: camera_pointer.h  ee_focus.h  ee_focus_publisher.h  ee_focus_publisher_base_class.h  ee_focus_publisher_child_class.h  unconstrained_camera_pointer.h
include/servo_camera_pointer/: camera_pointer_publisher.h
launch/: camera_pointer_demo.launch  ee_focus.launch  ee_focus_demo.launch  ee_focus_herbie.launch  ee_focus_simulation.launch
scripts/: dynamic_tf.py  servo_starter.sh
servo_camera_pointer/: CMakeLists.txt  README.md  camera_pointing_sim_install.md  package.xml
servo_camera_pointer/config/: pose_tracking_settings.yaml  ur_simulated_config.yaml
servo_camera_pointer/include/servo_camera_pointer/: camera_pointer.h  camera_pointer_publisher.h
servo_camera_pointer/launch/: camera_pointer_demo.launch  servo_camera_pointer.launch  servo_camera_pointer_simulation.launch  ur5.launch
servo_camera_pointer/scripts/: dynamic_tf.py
servo_camera_pointer/src/: camera_pointer.cpp  camera_pointer_main.cpp  camera_pointer_node.cpp  camera_pointer_publisher.cpp
servo_camera_pointer/srv/: PointToPose.srv
src/: camera_pointer.cpp  camera_pointer_main.cpp  camera_pointer_publisher.cpp  ee_focus.cpp  ee_focus_default_plugins.cpp  ee_focus_main.cpp  ee_focus_node.cpp  ee_focus_plugins.cpp  ee_focus_publisher.cpp  ee_focus_publisher_base_class.cpp  ee_focus_publisher_child_class.cpp
srv/: SetTargetFrame.srv
