<?xml version="1.0"?>
<package format="2">
  <name>servo_camera_pointer</name>
  <version>0.0.0</version>
  <description>The servo_camera_pointer package</description>

  <maintainer email="adam.pettinger@utexas.edu">Adam Pettinger</maintainer>

  <license>TODO</license>

  <author email="adam.pettinger@utexas.edu">Adam Pettinger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>look_at_pose</build_depend>
  <build_depend>moveit_servo</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>look_at_pose</build_export_depend>
  <build_export_depend>moveit_servo</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>look_at_pose</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
